--- a/index.html
+++ b/index.html
@@ -8,9 +8,13 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="./recipes/pizza.html">Pizza</a>
-    <a href="./recipes/steak.html">Steak</a>
-    <a href="./recipes/pasta.html">Pasta</a>
-    
+    <div>
+        <ul>
+            <li><a href="./recipes/pizza.html">Pizza</a></li>
+            <li><a href="./recipes/steak.html">Steak</a></li>
+            <li><a href="./recipes/pasta.html">Pasta</a></li>
+        </ul>
+    </div>
+    <a href="#header">Return to top</a>
 </body>
 </html>
