Added css links to each file

--- a/recipes/pasta.html
+++ b/recipes/pasta.html
@@ -5,18 +5,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="../style.css">
 </head>
 <body>
-    <h1>Pasta</h1>
+    <h1 class="title-header">Pasta</h1>
     <img src="../img/pasta.png" alt="Pasta" width="240" height="200">
-    <h2>Description</h2>
-    <ul>
+    <h2 class="title-description">Description</h2>
+    <ul class="ingredients">
         <li>Pasta</li>
         <li>Tomato-Sauce</li>
         <li>Meat</li>
         <li>Cheese</li>
     </ul>
-    <ol>
+    <ol class="preparation">
         <li>Cook Pasta</li>
         <li>Cook Tomato-Sauce</li>
         <li>add Meat ot Tomato-Sauce</li>
