--- a/recipes/steak.html
+++ b/recipes/steak.html
@@ -5,18 +5,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="../style.css">
 </head>
 <body>
-    <h1>Steak</h1>
+    <h1 class="title-header">Steak</h1>
     <img src="../img/steak.png" alt="Steak" width="300" height="200">
-    <h2>Description</h2>
-    <ul>
+    <h2 class="title-description">Description</h2>
+    <ul class="ingredients">
         <li>Meat</li>
         <li>Potatoes</li>
         <li>Salt</li>
         <li>Pepper</li>
     </ul>
-    <ol>
+    <ol class="preparation">
         <li>Cook Steak</li>
         <li>Add Salt and Pepper</li>
         <li>Cook Potatoes</li>
