--- a/index.html
+++ b/index.html
@@ -5,16 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Odin Recipes</h1>
+    <h1 class="title-header">Odin Recipes</h1>
     <div>
-        <ul>
+        <ul class="menu">
             <li><a href="./recipes/pizza.html">Pizza</a></li>
             <li><a href="./recipes/steak.html">Steak</a></li>
             <li><a href="./recipes/pasta.html">Pasta</a></li>
         </ul>
     </div>
-    <a href="#header">Return to top</a>
 </body>
 </html>
