--- a/recipes/pizza.html
+++ b/recipes/pizza.html
@@ -5,18 +5,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="../style.css">
 </head>
 <body>
-    <h1>Pizza</h1>
+    <h1 class="title-header">Pizza</h1>
     <img src="../img/pizza.png" alt="Pizza" width="200" height="200">
-    <h2>Description</h2>
-    <ul>
+    <h2 class="title-description">Description</h2>
+    <ul class="ingredients">
         <li>Cheese</li>
         <li>Pizza-Dough</li>
         <li>Meat</li>
         <li>Tomato-Sauce</li>
     </ul>
-    <ol>
+    <ol class="preparation">
         <li>roll out dough</li>
         <li>add Tomato-Sauce</li>
         <li>add Meat</li>
